--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ src/.DS_Store
 templates/osx/Pim_osxtemplate/Build/*
 
 visualstudio2012/Pim.sdf
+visualstudio2012/Pim.v11.suo
+visualstudio2012/*.suo
 
 visualstudio2012/Debug
 visualstudio2012/Debug/*
