No real changes. Configs.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ templates/osx/Pim_osxtemplate/Build/*
 visualstudio2012/Pim.sdf
 visualstudio2012/Pim.v11.suo
 visualstudio2012/*.suo
+visualstudio2012/*.opensdf
 
 visualstudio2012/Debug
 visualstudio2012/Debug/*
