--- a/visualstudio2012/Pim.vcxproj
+++ b/visualstudio2012/Pim.vcxproj
@@ -178,8 +178,8 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>xcopy $(ProjectDir)..\src\*.h $(ProjectDir)..\bin\include\ /Y
+xcopy $(ProjectDir)..\bin\* C:\lib\Pim\ /S /I /Y</Command>
     </PostBuildEvent>
     <Lib>
       <AdditionalDependencies>SDL.lib;SDLmain.lib;OpenAL32.lib;tinyxml.lib;libvorbisfile_static.lib;libvorbis_static.lib;libogg_static.lib;glew32s.lib;zlib.lib;libpng15.lib;freetype2110MT_D.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;%(AdditionalDependencies)</AdditionalDependencies>
