Added NormalMap, LightingSystem more accessible
PimNormalMap has been added to the Pim core.

The LightingSystem class is more accessible, and future versions will
require the user to interact directly with it, rather than through
PimLayer methods.

The Pim-Demo project has been updated to reflect these changes.

--- a/visualstudio2012/Pim.vcxproj
+++ b/visualstudio2012/Pim.vcxproj
@@ -375,6 +375,7 @@ xcopy $(ProjectDir)..\bin\* C:\lib\Pim\ /S /I /Y</Command>
     <ClCompile Include="..\src\PimLevelParser.cpp" />
     <ClCompile Include="..\src\PimLightDef.cpp" />
     <ClCompile Include="..\src\PimLightingSystem.cpp" />
+    <ClCompile Include="..\src\PimNormalMap.cpp" />
     <ClCompile Include="..\src\PimParticleSystem.cpp" />
     <ClCompile Include="..\src\PimPolygonShape.cpp" />
     <ClCompile Include="..\src\PimRenderTexture.cpp" />
@@ -406,6 +407,7 @@ xcopy $(ProjectDir)..\bin\* C:\lib\Pim\ /S /I /Y</Command>
     <ClInclude Include="..\src\PimLightDef.h" />
     <ClInclude Include="..\src\PimLightingSystem.h" />
     <ClInclude Include="..\src\PimLightingSystemShaders.h" />
+    <ClInclude Include="..\src\PimNormalMap.h" />
     <ClInclude Include="..\src\PimParticleSystem.h" />
     <ClInclude Include="..\src\PimPolygonShape.h" />
     <ClInclude Include="..\src\PimRenderTexture.h" />
