[demo] Added alternative normalmap for LightLayer

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,19 @@ demo/vs2012/Release/*
 demo/vs2012/Debug/*
 demo/*.pdb
 demo/*.exe
+
+*.hmap
+
+*.d
+
+*.dia
+
+*.o
+
+*.LinkFileList
+
+*.dep
+
+*.dat
+
+demo/pim_demo
